--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,6 +6,6 @@
     <h2>Saytga Kirish</h2>
     <form method="post"> {%csrf_token%}
         {{form.as_p}}
-        <button type="submit">Kirish</button>
+        <button type="button" class="btn btn-primary">Kirish</button>
     </form>
 {%endblock content%}
