--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -6,6 +6,6 @@
     <h2>Ro'yhatdan o'tish</h2>
     <form method="post"> {%csrf_token%}
         {{form.as_p}}
-        <button type="submit">Yuborish</button>
+        <button type="button" class="btn btn-primary">Yuborish</button>
     </form>
 {%endblock content%}
